# mechai_sims

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: diff_drive_controller.yaml  ekf.yaml  joy_config.yaml  mecanum_drive_controller.yaml  teleop_config.yaml
include/mechai_sims/: gazebo_ros_mecanum_control.hpp  gazebo_ros_mechanum_control.hpp
launch/: diff_drive_nav2.launch.py  mecanum_car.launch.py  mecanum_car_nav2.launch.py  mecanum_drive.launch.py  mecanum_drive_nav2.launch.py  mechanum_car.launch.py  navigation_launch.py  r2d2.launch.py  spawn_entity_demo.launch.py
sdf/: mule_car.sdf.xml
sdf/mecanum_car/: model.config  model.sdf
src/: gazebo_ros_mecanum_control.cpp  gazebo_ros_mechanum_control.cpp
tf_trees/: frames.gv
urdf/: diff_drive.xacro.urdf  mecanum_car.xacro.urdf  mecanum_copy.xacro.urdf  mechanum_car.xacro.urdf  r2d2.urdf.xml
world/: mecanum_car.world
